k8s/namespace-ray.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ray-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: ray
